--- a/src/assets/styles/layouts/_sections.scss
+++ b/src/assets/styles/layouts/_sections.scss
@@ -1,6 +1,5 @@
 @use "../abstracts/" as *;
 
-// Main landing ID INTRO
 .main-landing {
   height: 100vh;
   display: flex;
@@ -12,5 +11,37 @@
     font-family: $display-serif-m;
     font-size: clamp(3rem, 12vw, 8.5rem);
     text-align: center;
+  }
+}
+
+.weather-section {
+  display: flex;
+  flex-direction: row;
+
+  .main-card {
+    flex: 0 0 50%;
+  }
+
+  .places-wrapper {
+    flex: 1;
+  }
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+
+    .main-card {
+      width: 100%;
+      min-height: 100vh;
+    }
+
+    .places-wrapper {
+      width: 100%;
+
+      .places {
+        flex-direction: column;
+        width: 100%;
+        gap: 0;
+      }
+    }
   }
 }
